--- a/Prometheum.csproj
+++ b/Prometheum.csproj
@@ -6,11 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coreRcon" Version="5.0.2" />
     <PackageReference Include="dsharpplus" Version="4.1.0" />
     <PackageReference Include="DSharpPlus.CommandsNext" Version="4.1.0" />
     <PackageReference Include="mongodb.bson" Version="2.14.1" />
     <PackageReference Include="mongodb.driver" Version="2.14.1" />
-    <PackageReference Include="rconsharp" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
